bug when scrolling on mobile fix

--- a/MichailidisAlarms.gr/offer.css
+++ b/MichailidisAlarms.gr/offer.css
@@ -5,9 +5,7 @@ html{
 html::-webkit-scrollbar{
     display: none;
 }
-body{
-    overflow-x: hidden;
-}
+
 #scrolltotopoffer{
     background-color: #e6e6e6;
     border: 1px solid rgba(0, 0, 0, 0.055);
